tests/specs/check/wasm/check.out
Check (tsc [WILDLINE])
TS2307 [ERROR]: Cannot find module 'http://localhost:4545/wasm/math.wasm' or its corresponding type declarations.
import { add } from "http://localhost:4545/wasm/math.wasm";
                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    at file://[WILDCARD]/main.ts:1:21

error: Type checking failed.
